# computer-use-stage1-raw-python

./: .gitignore  README.md  STAGE_PROFILE.md  pyproject.toml
config/: model.default.json  stage_profile.json
docs/: DATASET.md  TRAINING_FLOW.md
runbooks/: QUICKSTART.md
src/computer_use_stage1_raw_python/: __init__.py  cli.py  dataset.py
